--- a/Labs/lab03/resume.html
+++ b/Labs/lab03/resume.html
@@ -43,7 +43,7 @@
         <h1>Robert Hughes</h1>
         <h2>Contact Information</h2>
         <p>Email: <a href="mailto:trayhughes8@tamu.edu">trayhughes8@tamu.edu</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/roberthughes" target="_blank">linkedin.com/in/roberthughes</a></p>
+        <p>GitHub: <a href="https://github.com/trayhughes8/Hughes_GEOG678_New" target="_blank">https://github.com/trayhughes8/Hughes_GEOG678_New</a></p>
 
         <h2>Education</h2>
         <p>Stephen F. Austin State University, Bachelor of Science in Geography</p>
