--- a/Labs/lab03/resume.html
+++ b/Labs/lab03/resume.html
@@ -50,7 +50,7 @@
         <p>Texas A&M University, Current Graduate Student</p>
 
         <h2>Experience</h2>
-        <img src="trayhughes8/Hughes_GEOG678_New/blob/main/Labs/lab03/82nd_Airborne_Division_CSIB.svg.png">
+        <img src="https://github.com/trayhughes8/Hughes_GEOG678_New/blob/main/Labs/lab03/82nd_Airborne_Division_CSIB.svg.png">
        
         <p><strong>Airborne Infantryman</strong> - United States Army (2021-2024)</p>
         <ul>
