--- a/Labs/lab03/resume.html
+++ b/Labs/lab03/resume.html
@@ -50,6 +50,7 @@
         <p>Texas A&M University, Current Graduate Student</p>
 
         <h2>Experience</h2>
+        <img src="https://raw.githubusercontent.com/trayhughes8/Hughes_GEOG678_New/blob/main/Labs/lab03/82nd_Airborne_Division_CSIB.svg.png" alt="82nd Airborne Division" width="100" height="200">
         
         <img src="./https://github.com/trayhughes8/Hughes_GEOG678_New/blob/main/Labs/lab03/82nd_Airborne_Division_CSIB.svg.png">
        
